@@ -1,5 +1,8 @@
 2003-03-21  Naba Kumar  <naba@gnome.org>
 
+	* src/anjuta_cbs.c: Fixed alphabetical ordering of tabs with
+	preferences.
+	
 	* src/anjuta-tools.c: Fixed compiler errors.
 
 	* src/anjuta-tools.c, src/attach_process.c: Fixed more window
